--- a/student/templates/hello.html
+++ b/student/templates/hello.html
@@ -19,13 +19,10 @@ layui.use(['form','layer'] ,function(){
       ,form = layui.form;
 
   //layer.msg('Hello World');
-  //layer.msg('Hello Worldrrrrrrr', {icon: 6});
-  layer.confirm('sdsdsdg', {icon: 3, title:'提示'}, function(aa){
-      layer.alert('点击确定后执行');
-      layer.close(aa)
-  });
+  layer.msg('上传文件成功', {icon: 6});
+
 });
-layer.msg('sdgsd');
+
 
 </script>
 </body>
