--- a/login/templates/login1.html
+++ b/login/templates/login1.html
@@ -29,13 +29,27 @@
                   </div>
                 <div>
                   <a href="/register/" class="text-success "><ins>新用户注册</ins></a>
-                  <button type="submit" class="layui-btn">登录</button>
+                  <button  class="layui-btn" lay-submit lay-filter="formDemo">登录</button>
                 </div>
               </form>
             </div>
     </div> <!-- /container -->
 
 <script src="{% static 'layui/layui.js' %}"></script>
-<script src="{% static 'layui/demo.js' %}"></script>
+
+<script>
+//Demo
+layui.use(['layer', 'form'], function(){
+  var form = layui.form,
+      layer = layui.layer;
+
+  //监听提交
+  form.on('submit(formDemo)', function(data){
+    layer.msg(JSON.stringify(data.field));
+    return false;
+  });
+});
+</script>
+
 </body>
 </html>
