--- a/login/templates/1.html
+++ b/login/templates/1.html
@@ -25,6 +25,7 @@
 <div class="div1">今晚吃什么
     <div class="div2">明早吃什么</div>
     <div class="div2">明早吃什么</div>
+    <div class="div2">明早吃什么</div>
 
 </div>
 </body>
